# tlaplus-cli

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: development.md  module-how-to.md  plan.md  quick-module-overview.md  scratch.md  thread-safty-note.md  tlc-version-manager-plan.md  todo.md
docs/implementation/: notes.md  plan.md  review.md
scripts/: release.sh
spec/: README.md  cli.cfg  cli.tla
src/tlaplus_cli/: __init__.py  build_tlc_module.py  cli.py  config.py  config_cli.py  download_tla2tools.py  project.py  run_tlc.py  settings.py  tlc_manager.py  tools_manager.py  ui.py  version_manager.py
src/tlaplus_cli/cache/: github.py
src/tlaplus_cli/cmd/: check_java.py  tlc.py
src/tlaplus_cli/cmd/config/: __init__.py  edit.py  list.py
src/tlaplus_cli/cmd/fetch_cache/: __init__.py  clear.py
src/tlaplus_cli/cmd/modules/: __init__.py  build.py  lib.py  path.py
src/tlaplus_cli/cmd/tools/: __init__.py  dir.py  install.py  list.py  path.py  pin.py  uninstall.py  upgrade.py
src/tlaplus_cli/cmd/tools/meta/: __init__.py  sync.py
src/tlaplus_cli/config/: loader.py
src/tlaplus_cli/java/: __init__.py  inspector.py
src/tlaplus_cli/project/: __init__.py  core.py
src/tlaplus_cli/resources/: default_config.yaml
src/tlaplus_cli/tlc/: compiler.py  runner.py
src/tlaplus_cli/versioning/: __init__.py  api.py  downloader.py  metadata.py  paths.py  resolver.py  schema.py
tests/: conftest.py  test_build_both.py  test_build_modules_path.py  test_build_tlc_module.py  test_check_java.py  test_cli.py  test_config.py  test_config_suite.py  test_download_tla2tools.py  test_java_module_naming.py  test_modules_build_lib.py  test_modules_lib.py  test_modules_path.py  test_project.py  test_run_tlc.py  test_settings.py  test_spec_resolution.py  test_tlc_manager.py  test_tlc_modules_path.py  test_tools_manager.py  test_version_manager.py
tests/check_java/: test_check_java.py
tests/fixtures/: releases.json  tags.json
tests/fixtures/naming_dynamic/modules/tlc2/overrides/: TestModule.java
tests/fixtures/naming_fixed/modules/tlc2/overrides/: TLCOverrides.java
tests/fixtures/naming_fixed/spec/: TestModule.tla  test_spec.tla
tests/fixtures/queue/modules/tlc2/overrides/: TLCOverrides.java
tests/fixtures/queue/spec/: QueueUtils.tla  queue.cfg  queue.tla
tests/spec/: conftest.py  test_classpath.py  test_project.py  test_resolution_scenarios.py
tests/tlc/: conftest.py  test_build_integration.py  test_build_logic.py  test_naming.py  test_tlc_integration.py  test_tlc_version.py
tests/tools/: conftest.py  test_dir.py  test_fetch_cache.py  test_install.py  test_list.py  test_meta.py  test_path.py  test_pin.py  test_uninstall.py  test_upgrade.py  test_version_manager_url.py
tests/version_manager/: test_download.py  test_local.py  test_metadata.py  test_migration.py  test_remote.py  test_resolution.py  test_urls.py
tla/: build_tlc_module.py  check_java.py  cli.py  config.py  download_tla2tools.py  run_tlc.py
tla/resources/: default_config.yaml
